welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value faceMur
if(faceMur){
   ^