welcome.lessons.welcome.conditions.Conditions.scala.code
if(faceMur){
	recule();
}else{
	avance();
}
